--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,29 @@
 {
     "manifest_version" : 2,
+	"default_locale": "en",
 
     "name" : "In-page Highlighter",
-    "version" : "0.1",
-    "description" : "Instantly hightlight anything you select in current page",
+    "version" : "0.2",
+    "description" : "Instantly highlight anything you select in current page",
 	
     "content_scripts" : [{
             "matches" : ["<all_urls>"],
 			"css" : ["style.css"],
             "js" : ["j.js"]
         }],
+	"background": {
+		"scripts": ["get_options.js"],
+		"persistent": true
+	},
     "permissions" : [
         "http://*/*",
         "https://*/*"
     ],
 	"browser_action": {
-		"default_icon": "icon.png",
-		"default_popup": "popup.html"
+		"default_icon": {
+			"19": "icon.png",
+			"38": "icon@2x.png"
+		}
 	},
 	"options_page": "options.html"
 }
