--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
 
     "name" : "In-page Highlighter",
     "version" : "0.2",
-    "description" : "Instantly highlight anything you select in current page",
-	
+    "description" : "__MSG_description__",
+
     "content_scripts" : [{
             "matches" : ["<all_urls>"],
 			"css" : ["style.css"],
